<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.qjf.backup.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_log"
            android:name="com.qjf.backup.ui.log.LogFragment"
            android:label="@string/title_log"
            tools:layout="@layout/fragment_log"/>

    <fragment
            android:id="@+id/navigation_setting"
            android:name="com.qjf.backup.ui.setting.SettingFragment"
            android:label="@string/title_setting"
            tools:layout="@layout/fragment_setting"/>

    <fragment
            android:id="@+id/page_upload_log_fragment"
            android:name="com.qjf.backup.ui.log.UploadLogViewFragment"
            tools:layout="@layout/fragment_uploadlog"/>
</navigation>