<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        android:fadingEdge="vertical">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.setting.SettingFragment"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/smb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="SMB"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:enabled="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/smb_server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/smb_server"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/smb_shareName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/smb_shareName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/smb_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/smb_user"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/smb_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/smb_pwd"
                    android:imeActionId="6"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/smb_test_connect"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="-5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="right"
                android:text="@string/smb_connect_text"
                tools:ignore="RtlHardcoded"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/imgPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="图片存储目录"
                    android:maxLines="1"
                    android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/videoPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="视频存储目录"
                    android:maxLines="1"
                    android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/audioPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="音频存储目录"
                    android:maxLines="1"
                    android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otherPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="其它文件存储目录"
                    android:maxLines="1"
                    android:enabled="false"
                    android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout><!--android:background="@null"-->

        <RadioGroup
                android:id="@+id/backUpStrategyGroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/handBackUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/handBackUpText"/>

            <RadioButton
                    android:id="@+id/autoBackUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/autoBackUpText"
                    android:checked="false"
                    android:enabled="false"/>
        </RadioGroup>

        <RadioGroup
                android:id="@+id/networkBackupGroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/onlyWifiBackUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="只在WIFI环境下备份"
                    android:checked="true"/>

            <RadioButton
                    android:id="@+id/allNetworkBackup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:checked="false"
                    android:text="所有网络环境下均可备份"/>
        </RadioGroup>


        <RadioGroup
                android:id="@+id/showHiddenGroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/showHidden"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="显示隐藏"
                    android:checked="true"/>

            <RadioButton
                    android:id="@+id/dontShowHidden"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:text="不显示隐藏"/>
        </RadioGroup>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="14dp"
                android:layout_marginStart="10dp"
                android:textAlignment="gravity"
                android:textSize="12sp"
                android:textColor="@color/design_default_color_error"
                android:text="tips: .开头的文件和目录视为隐藏文件和目录"
                />

        <!--<com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:hint="图片开始备份日期(文件创建日期)"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/img_last_backup_datetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:enabled="false"
                    />
            &lt;!&ndash; UI已经换行了 &ndash;&gt;
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/select_img_datetime_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="选择日期时间"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:hint="视频开始备份日期(文件创建日期)">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/video_last_backup_datetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:enabled="false"/>
            &lt;!&ndash; UI已经换行了 &ndash;&gt;
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/select_video_datetime_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="选择日期时间"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:hint="音频开始备份日期(文件创建日期)">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/audio_last_backup_datetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:enabled="false"/>
            &lt;!&ndash; UI已经换行了 &ndash;&gt;
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/select_audio_datetime_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="选择日期时间"
                    />
        </com.google.android.material.textfield.TextInputLayout>-->

        <Button
                android:id="@+id/setting_submit_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="保存配置"
                android:textSize="26sp"/>

        <Button
                android:id="@+id/manual_sync"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="手动同步一次"
                android:textSize="24sp"
                android:textFontWeight="700"/>

        <!--<Button
                android:id="@+id/discover_server_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="发现服务"
                android:textSize="26sp"/>-->

    </LinearLayout>
</ScrollView>

